--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ img {vertical-align: top;}
 .tabs__body {
     padding: 50px;
     box-shadow: 0 1px 4px 0 rgba(51, 51, 51, 0.3);
-    min-height: 350px;
+    min-height: 360px;
     background-color: #ffffff;
 }
 .tabs__block {
@@ -142,6 +142,20 @@ img {vertical-align: top;}
 .btn:hover {
     background-color: #6c96bd;
     color:#ffffff;
+}
+.message-block {
+    margin: 30px 0 0;
+    border: none;
+    color: #fff;
+    min-height: 40px;
+    font-size: 16px;
+}
+.message-block__error, .message-block__error:hover {
+    background-color: #c78585;
+}
+.message-block__welcome, .message-block__welcome:hover {
+    background-color: #60b46c;
+    min-height: 80px;
 }
 /*<MEDIA>========================================================================*/
 @media (max-width: 767px) {
